--- a/first.html
+++ b/first.html
@@ -6,35 +6,67 @@
  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div id="wrapper">
-    <header><h1>Welcome to my Website</h1></header>
-        <nav>
-        <ul>
-        <li>Home</li>
-        <li>Register</li>
-        <li>Contact</li>
-        <li>About</li>
+    <div id="wrapper">
+        <header><h1>WELCOME TO MY WEBSITE</h1></header>
+            <nav>
+        <ul id="nav">
+            <li id="home"><a href="">หน้าที่1</a></li>
+            <li><a href="">หน้าที่2</a></li>
+            <li><a href="">หน้าที่3</a></li>
+            <li><a href="">หน้าที่4</a></li>
         </ul>
-        </nav>
-    <div id="sec_wrapper">
-        <section>
-            <article>
-                <header>
-                    <hgroup>
-                        <h1>I like you</h1>
-                        <h2>seriousI'm </h2>
-                    </hgroup>
-                        <p>You are so kind.</p>
-        <footer>My name is IT</footer>
-                </header>
-            </article>
-        </section>
-        <aside>
-            <h4>I love my dog</h4>
-            <p>It name's ddd</p>
-        </aside>
+    </nav>
+        <div id="sec_wrapper">
+            <section>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>I like you</h2>
+                            <h2>seriousI'm </h2>
+                        </hgroup>
+                            <p>You are so kind.</p>
+            <footer>My name is IT</footer>
+                    </header>
+                </article>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>I like you</h2>
+                            <h2>seriousI'm </h2>
+                        </hgroup>
+                            <p>You are so kind.</p>
+            <footer>My name is IT</footer>
+                    </header>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>I like you</h2>
+                            <h2>seriousI'm </h2>
+                        </hgroup>
+                            <p>You are so kind.</p>
+            <footer>My name is IT</footer>
+                    </header>
+                </article>
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>I like you</h2>
+                            <h2>seriousI'm </h2>
+                        </hgroup>
+                            <p>You are so kind.</p>
+            <footer>My name is IT</footer>
+                    </header>
+                </article>
+            </section>
+            <aside>
+                <h4>I love my dog</h4>
+                <p>It name's ddd</p>
+            </aside>
+        </div>
+        <footer>Copy Rigth 2014 By IT</footer>
     </div>
-    <footer>Copy Rigth 2014 By IT</footer>
-</div>
 </body>
 </html>
